--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Magic Table</title>
+    <title>Inicio Sesión</title>
     <link rel="icon" href="./images/cubiertos.png" type="image/png">
 </head>
 <header>
@@ -23,7 +23,7 @@
         <a href="#">Restaurantes</a>
         <a href="#">Ordenar</a>
         <a href="#">Cuenta</a>
-        <a href="#">Crea Una Cuenta</a>
+        <a href="inicio-Sesion.html">Inicio Sesión</a>
     </nav>
 </header>
 
@@ -55,7 +55,7 @@
 
                 <input type="submit" class="formSubmit" value="Entrar"> 
 
-                <p class="formParagraph">¿Olvidates la contraseña? <a href="#">Recuperala Aquí</a></p>
+                <p class="formParagraph">¿Olvidaste tu contraseña? <a href="#">Recuperala Aquí</a></p>
 
             </div>
 
