--- a/registro.html
+++ b/registro.html
@@ -28,7 +28,7 @@
 
         <form class="form">
             <h2 class="formTitle">Regístrate</h2>
-            <p class="formParagraph">¿Ya tienes una cuenta? <a href="./inicio-Sesion.html">Inicia sesión</a></p>
+            <p class="formParagraph">¿Ya tienes una cuenta? <a href="inicio-Sesion.html">Inicia sesión</a></p>
 
             <div class="formContainer">
 
