--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -31,7 +31,7 @@
 
         <form class="form">
             <h2 class="formTitle">Inicia Sesión</h2>
-            <p class="formParagraph">¿Aún no tienes una cuenta? <a href="#">Creala Aquí</a></p>
+            <p class="formParagraph">¿Aún no tienes una cuenta? <a href="registro.html">Creala Aquí</a></p>
 
             <div class="formContainer">
 
