--- a/registro.html
+++ b/registro.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="style.css">
     <title>Regístrate</title>
     <link rel="icon" href="./images/cubiertos.png" type="image/png">
 </head>
@@ -57,8 +57,6 @@
                 </div>
 
                 <input type="submit" class="formSubmit" value="Registrarse"> 
-
-                <p class="formParagraph">¿Olvidaste la contraseña? <a href="#">Recuperala aquí</a></p>
 
             </div>
 
