--- a/registro.html
+++ b/registro.html
@@ -34,7 +34,7 @@
 
                 <div class="formGroup">
                     <input type="text" id="name" class="formInput" placeholder=" ">
-                    <label for="name" class="formLabel">Nombre:</label>
+                    <label for="name" class="formLabel">Usuario:</label>
                     <span class="formLine"></span>
                 </div>
 
