--- a/magic-table.html
+++ b/magic-table.html
@@ -24,7 +24,7 @@
         <a href="restaurants.html">Restaurantes</a>
         <a href="#">Ordenar</a>
         <a href="#">Cuenta</a>
-        <a href="#">Inicio sesión</a>
+        <a href="inicio-Sesion.html">Inicio sesión</a>
     </nav>
 </header>
 
