--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -34,7 +34,11 @@
             <p class="formParagraph">¿Aún no tienes una cuenta? <a href="registro.html">Creala Aquí</a></p>
 
             <div class="formContainer">
-
+                 <div class="formGroup">
+                    <input type="text" id="name" class="formInput" placeholder=" ">
+                    <label for="name" class="formLabel">Nombre:</label>
+                    <span class="formLine"></span>
+                </div>
                
 
                 <div class="formGroup">
