--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -11,6 +11,7 @@
 </head>
 <header>
     <div id="logo-div">
+        <a href="magic-table.html">
         <img src="./images/logo_white.png" class="logo">
     </div>
     
