--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,7 @@
 </head>
 <header>
     <div id="logo-div">
+        <a href="magic-table.html">
         <img src="./images/logo_white.png" class="logo">
     </div>
     
