--- a/registro.html
+++ b/registro.html
@@ -19,7 +19,7 @@
     </label>
     <nav class="menu">
         <a href="#">Nosotros</a>
-        <a href="#">Restaurantes</a>
+        <a href="restaurants.html">Restaurantes</a>
         <a href="#">Ordenar</a>
         <a href="#">Cuenta</a>
         <a href="inicio-Sesion.html">Inicia sesión</a>
