--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -22,7 +22,7 @@
     </label>
     <nav class="menu">
         <a href="#">Nosotros</a>
-        <a href="#">Restaurantes</a>
+        <a href="restaurants.html">Restaurantes</a>
         <a href="#">Ordenar</a>
         <a href="#">Cuenta</a>
         <a href="inicio-Sesion.html">Inicio Sesión</a>
