--- a/restaurants.html
+++ b/restaurants.html
@@ -7,25 +7,31 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./images/cubiertos.png" type="image/png">
 </head>
+<header>
+  
+    <a href="magic-table.html">
+        <img src="./images/logo_white.png" class="logo" alt="Magic Table Logo">
+    </a>
+   
+
+<input type="checkbox" id="check">
+<label for="check" class="mostrar-menu">&#8801</label>
+
+<nav class="menu">
+    <a href="#">Nosotros</a>
+    <a href="restaurants.html">Restaurantes</a>
+    <a href="#">Ordenar</a>
+    <a href="#">Cuenta</a>
+    <a href="inicio-Sesion.html">Inicio sesión</a>
+    <label for="check" class="esconder-menu">
+        &#215
+    </label>
+</nav>
+
+</header>
 <body class="background">
     <div class="body-container">
-        <header>
-            <div id="logo-div">
-                <a href="magic-table.html">
-                    <img src="./images/logo_white.png" class="logo" alt="Magic Table Logo">
-                </a>
-            </div>
-            
-            <input type="checkbox" id="check">
-            <label for="check" class="mostrar-menu"></label>
-            <nav class="menu">
-                <a href="#">Nosotros</a>
-                <a href="restaurants.html">Restaurantes</a>
-                <a href="#">Ordenar</a>
-                <a href="#">Cuenta</a>
-                <a href="#">Inicio sesión</a>
-            </nav>
-        </header>
+        
 
         <section class="overlay">
             <div class="car-rst1">
@@ -37,4 +43,8 @@
         <!-- Contenido de la página -->
     </div>
 </body>
+
+<footer>
+     <p > Correo electrónico: tu-correo@example.com </p>
+</footer>
 </html>
