--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,7 @@
     
     <input type="checkbox" id="check">
     <label for="check" class="mostrar-menu">
-
+        &#8801
     </label>
     <nav class="menu">
         <a href="#">Nosotros</a>
@@ -23,6 +23,9 @@
         <a href="#">Ordenar</a>
         <a href="#">Cuenta</a>
         <a href="inicio-Sesion.html">Inicia sesión</a>
+        <label for="check" class="esconder-menu">
+            &#215
+        </label>
     </nav>
 </header>
 
