--- a/restaurants.html
+++ b/restaurants.html
@@ -35,7 +35,7 @@
 
         <section class="overlay">
             <div class="car-rst1">
-                <img src="./images/rst1.jpg" alt="Imagen 1">
+                <a href="registro.html"><img src="./images/rst1.jpg" alt="Imagen 1"></a>
             </div>
             <footer>
                 <p > Correo electrónico: tu-correo@example.com </p>
