--- a/inicio-Sesion.html
+++ b/inicio-Sesion.html
@@ -56,7 +56,7 @@
                     <span class="formLine"></span>
                 </div>
 
-                <input type="submit" class="formSubmit" value="Entrar"> 
+                <input style="background-color:#001A57" type="submit" class="formSubmit" value="Entrar"> 
 
                 <p class="formParagraph">¿Olvidaste tu contraseña? <a href="#">Recuperala Aquí</a></p>
 
