--- a/registro.html
+++ b/registro.html
@@ -86,7 +86,7 @@
                     <span class="formLine"></span>
                 </div>
 
-                <input type="submit" class="formSubmit" value="Registrarse"> 
+                <input style="background-color:#001A57" type="submit" class="formSubmit" value="Registrarse"> 
 
             </div>
 
