--- a/magic-table.html
+++ b/magic-table.html
@@ -35,7 +35,7 @@
 
 
 
-<button class="botton-reserva" onclick="window.location.href='restaurants.html'">¡Ordena ya!</button>
+<button style="background-color:#C0C0C0" class="botton-reserva" onclick="window.location.href='restaurants.html'">¡Ordena ya!</button>
 <div class="content">
     <div>
         <img src="./images/welcome-font.png" class="welcome-font" alt="Welcome Font">
